# game_of_life

./: .pre-commit-config.yaml  README.md  requirments.txt  setup.cfg
game_of_life/: main.py
test/unittests/: test_main.py
