[metadata]
description-file = README.md

[coverage:run]
branch = True
source = game_of_life
omit =

[coverage:report]
exclude_lines =-
    if __name__ == .__main__.:

[flake8]
show-source = True
statistics = False
doctests = True
inline-quotes = double
max-returns = 2
max-arguments = 4
max-line-length = 120
max-complexity = 6
ignore = Q000
exclude=
    **/__init__.py

[isort]
profile=black
line_length = 120
include_trailing_comma = True
known_third_party =pytest


[mypy]
mypy_path = mypy-stubs
